Build .command file for mac from other scripts too